<resources>
    <string name="app_name">Student</string>

    <string name="add">Add</string>
    <string name="activity">Activity</string>
    <string name="view_head">Setting</string>
    <string name="contact">Contact</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="location">Location</string>
    <string name="location_name">Location Name</string>
    <string name="sub_district">Sub district</string>
    <string name="district">District</string>
    <string name="province">Province</string>
    <string name="zip_code">Zip code</string>

</resources>
