<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.project.student.FormAppointment">

    <EditText
        android:id="@+id/activity_name"
        android:layout_width="@dimen/text_hint"
        android:layout_height="@dimen/text_hint_height"
        android:hint="@string/activity"/>
        <ImageButton
            android:id="@+id/add_activity"
            android:src="@drawable/ic_add_white_24dp"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:contentDescription="@string/add"
            android:layout_above="@+id/contact_name"
            android:layout_alignStart="@+id/add_contact" />


    <EditText
        android:id="@+id/contact_name"
        android:layout_width="@dimen/text_hint"
        android:layout_height="@dimen/text_hint_height"
        android:layout_below="@+id/activity_name"
        android:hint="@string/contact"/>
        <ImageButton
            android:id="@+id/add_contact"
            android:src="@drawable/ic_add_white_24dp"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:contentDescription="@string/add"
            android:layout_alignBottom="@+id/contact_name"
            android:layout_alignEnd="@+id/save" />


        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:layout_below="@+id/contact_name"
            android:layout_alignParentStart="true"
            />

        <Button
            android:id="@+id/save"
            android:text="@string/save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            tools:ignore="ButtonStyle"
            android:layout_below="@+id/contact_name"
            android:layout_alignParentEnd="true"
            android:onClick="startsave" />

</RelativeLayout>
